crates/hiko-syntax/src/parser.rs
use crate::ast::*;
use crate::intern::{StringInterner, Symbol};
use crate::span::Span;
use crate::token::{Token, TokenKind};

#[derive(Debug, Clone)]
pub struct ParseError {
    pub message: String,
    pub span: Span,
}

pub struct Parser {
    tokens: Vec<Token>,
    pos: usize,
    depth: u32,
    interner: StringInterner,
}

impl Parser {
    pub fn new(tokens: Vec<Token>) -> Self {
        Self {
            tokens,
            pos: 0,
            depth: 0,
            interner: StringInterner::new(),
        }
    }

    pub fn with_interner(tokens: Vec<Token>, interner: StringInterner) -> Self {
        Self {
            tokens,
            pos: 0,
            depth: 0,
            interner,
        }
    }

    // ── Utility ──────────────────────────────────────────────────────

    fn peek(&self) -> &TokenKind {
        &self.tokens[self.pos].kind
    }

    fn span(&self) -> Span {
        self.tokens[self.pos].span
    }

    fn advance(&mut self) {
        if self.pos + 1 < self.tokens.len() {
            self.pos += 1;
        }
    }

    fn eat(&mut self, kind: &TokenKind) -> Option<Span> {
        if std::mem::discriminant(self.peek()) == std::mem::discriminant(kind) {
            let span = self.span();
            self.advance();
            Some(span)
        } else {
            None
        }
    }

    fn expect(&mut self, kind: &TokenKind, desc: &str) -> Result<Span, ParseError> {
        self.eat(kind)
            .ok_or_else(|| self.err(&format!("expected {desc}")))
    }

    /// Take an identifier/tyvar payload from the current token, intern it, and advance.
    fn take_symbol(&mut self) -> Symbol {
        let s = match &mut self.tokens[self.pos].kind {
            TokenKind::Ident(s) | TokenKind::UpperIdent(s) | TokenKind::TyVar(s) => {
                std::mem::take(s)
            }
            _ => String::new(),
        };
        self.advance();
        self.interner.intern(&s)
    }

    /// Take a string literal payload from the current token and advance.
    fn take_string_lit(&mut self) -> String {
        let s = match &mut self.tokens[self.pos].kind {
            TokenKind::StringLit(s) => std::mem::take(s),
            _ => String::new(),
        };
        self.advance();
        s
    }

    fn expect_ident(&mut self) -> Result<(Symbol, Span), ParseError> {
        if matches!(self.peek(), TokenKind::Ident(_)) {
            let span = self.span();
            Ok((self.take_symbol(), span))
        } else {
            Err(self.err("expected identifier"))
        }
    }

    fn expect_ident_or_wildcard(&mut self) -> Result<(Symbol, Span), ParseError> {
        if matches!(self.peek(), TokenKind::Ident(_)) {
            let span = self.span();
            Ok((self.take_symbol(), span))
        } else if matches!(self.peek(), TokenKind::Underscore) {
            let span = self.span();
            self.advance();
            Ok((self.interner.intern("_"), span))
        } else {
            Err(self.err("expected identifier or _"))
        }
    }

    fn expect_upper_ident(&mut self) -> Result<(Symbol, Span), ParseError> {
        if matches!(self.peek(), TokenKind::UpperIdent(_)) {
            let span = self.span();
            Ok((self.take_symbol(), span))
        } else {
            Err(self.err("expected constructor name"))
        }
    }

    fn expect_exposed_import_name(&mut self) -> Result<(Symbol, Span), ParseError> {
        if matches!(self.peek(), TokenKind::Ident(_) | TokenKind::UpperIdent(_)) {
            let span = self.span();
            Ok((self.take_symbol(), span))
        } else {
            Err(self.err("expected exposed import name"))
        }
    }

    fn expect_import_package_name(&mut self) -> Result<(Symbol, Span), ParseError> {
        match self.peek() {
            TokenKind::UpperIdent(_) => {
                let span = self.span();
                Ok((self.take_symbol(), span))
            }
            TokenKind::Ident(name) if name.starts_with("__") => {
                let span = self.span();
                Ok((self.take_symbol(), span))
            }
            _ => Err(self.err("expected package name")),
        }
    }

    fn expect_name(&mut self) -> Result<(Symbol, Span), ParseError> {
        if matches!(self.peek(), TokenKind::Ident(_) | TokenKind::UpperIdent(_)) {
            let span = self.span();
            Ok((self.take_symbol(), span))
        } else {
            Err(self.err("expected name"))
        }
    }

    fn expect_tyvar(&mut self) -> Result<Symbol, ParseError> {
        if matches!(self.peek(), TokenKind::TyVar(_)) {
            Ok(self.take_symbol())
        } else {
            Err(self.err("expected type variable"))
        }
    }

    fn err(&self, message: &str) -> ParseError {
        ParseError {
            message: message.to_string(),
            span: self.span(),
        }
    }

    fn guard_depth(&mut self) -> Result<(), ParseError> {
        self.depth += 1;
        if self.depth > 256 {
            Err(self.err("expression nesting limit exceeded"))
        } else {
            Ok(())
        }
    }

    fn unguard_depth(&mut self) {
        self.depth -= 1;
    }

    fn can_start_app_arg(&self) -> bool {
        matches!(
            self.peek(),
            TokenKind::IntLit(_)
                | TokenKind::FloatLit(_)
                | TokenKind::WordLit(_)
                | TokenKind::StringLit(_)
                | TokenKind::CharLit(_)
                | TokenKind::True
                | TokenKind::False
                | TokenKind::Ident(_)
                | TokenKind::UpperIdent(_)
                | TokenKind::Tilde
                | TokenKind::Not
                | TokenKind::LParen
                | TokenKind::LBracket
        )
    }

    fn can_start_qualified_path(&self) -> bool {
        matches!(self.peek(), TokenKind::UpperIdent(_))
            && self.pos + 1 < self.tokens.len()
            && matches!(self.tokens[self.pos + 1].kind, TokenKind::Dot)
    }

    fn parse_qualified_symbol(&mut self) -> Result<(Symbol, bool, Span), ParseError> {
        let start = self.span();
        let mut parts = Vec::new();

        if !matches!(self.peek(), TokenKind::UpperIdent(_)) {
            return Err(self.err("expected qualified name"));
        }
        parts.push(self.take_symbol());

        while self.eat(&TokenKind::Dot).is_some() {
            match self.peek() {
                TokenKind::UpperIdent(_) | TokenKind::Ident(_) => parts.push(self.take_symbol()),
                _ => return Err(self.err("expected name after '.'")),
            }
        }

        let end = self.tokens[self.pos - 1].span;
        let last_name = self.interner.resolve(*parts.last().unwrap()).to_string();
        let is_constructor = last_name
            .as_bytes()
            .first()
            .is_some_and(|b| b.is_ascii_uppercase());
        let joined = parts
            .iter()
            .map(|sym| self.interner.resolve(*sym))
            .collect::<Vec<_>>()
            .join(".");
        let sym = self.interner.intern(&joined);
        Ok((sym, is_constructor, start.merge(end)))
    }

    fn can_start_atom_pat(&self) -> bool {
        matches!(
            self.peek(),
            TokenKind::Underscore
                | TokenKind::IntLit(_)
                | TokenKind::FloatLit(_)
                | TokenKind::WordLit(_)
                | TokenKind::StringLit(_)
                | TokenKind::CharLit(_)
                | TokenKind::True
                | TokenKind::False
                | TokenKind::Ident(_)
                | TokenKind::UpperIdent(_)
                | TokenKind::LParen
                | TokenKind::LBracket
                | TokenKind::Tilde
        )
    }

    // ── Program ──────────────────────────────────────────────────────

    pub fn parse_program(&mut self) -> Result<Program, ParseError> {
        let mut decls = Vec::new();
        while !matches!(self.peek(), TokenKind::Eof) {
            decls.push(self.parse_decl()?);
        }
        Ok(Program {
            decls,
            interner: std::mem::take(&mut self.interner),
        })
    }

    // ── Declarations ─────────────────────────────────────────────────

    fn parse_decl(&mut self) -> Result<Decl, ParseError> {
        match self.peek() {
            TokenKind::Val => self.parse_val_decl(),
            TokenKind::Fun => self.parse_fun_decl(),
            TokenKind::Datatype => self.parse_datatype_decl(),
            TokenKind::Type => self.parse_type_alias_decl(),
            TokenKind::Local => self.parse_local_decl(),
            TokenKind::Import => self.parse_import_decl(),
            TokenKind::Use => self.parse_use_decl(),
            TokenKind::Signature => self.parse_signature_decl(),
            TokenKind::Structure => self.parse_structure_decl(),
            TokenKind::Effect => self.parse_effect_decl(),
            _ => {
                Err(self
                    .err("expected declaration (val, fun, datatype, type, local, import, use, signature, structure, or effect)"))
            }
        }
    }

    fn parse_val_decl(&mut self) -> Result<Decl, ParseError> {
        let start = self.span();
        self.advance(); // consume `val`

        if self.eat(&TokenKind::Rec).is_some() {
            let (name, _) = self.expect_ident()?;
            self.expect(&TokenKind::Eq, "=")?;
            if !matches!(self.peek(), TokenKind::Fn) {
                return Err(self.err("val rec requires fn on the right-hand side"));
            }
            let body = self.parse_expr()?;
            let span = start.merge(body.span);
            return Ok(Decl {
                kind: DeclKind::ValRec(name, body),
                span,
            });
        }

        let pat = self.parse_pat()?;
        self.expect(&TokenKind::Eq, "=")?;
        let body = self.parse_expr()?;
        let span = start.merge(body.span);
        Ok(Decl {
            kind: DeclKind::Val(pat, body),
            span,
        })
    }

    fn parse_fun_decl(&mut self) -> Result<Decl, ParseError> {
        let start = self.span();
        self.advance(); // consume `fun`

        let mut bindings = Vec::new();
        loop {
            bindings.push(self.parse_fun_binding()?);
            if self.eat(&TokenKind::And).is_none() {
                break;
            }
        }
        let span = start.merge(bindings.last().unwrap().span);
        Ok(Decl {
            kind: DeclKind::Fun(bindings),
            span,
        })
    }

    fn parse_fun_binding(&mut self) -> Result<FunBinding, ParseError> {
        let (name, name_span) = self.expect_ident()?;
        let mut clauses = Vec::new();

        loop {
            let clause_start = self.span();
            let mut pats = Vec::new();
            while self.can_start_atom_pat() {
                pats.push(self.parse_atom_pat()?);
            }
            if pats.is_empty() {
                return Err(self.err("expected at least one parameter pattern"));
            }
            self.expect(&TokenKind::Eq, "=")?;
            let body = self.parse_expr()?;
            let clause_span = clause_start.merge(body.span);
            clauses.push(FunClause {
                pats,
                body,
                span: clause_span,
            });

            // Check for another clause: | name ...
            if matches!(self.peek(), TokenKind::Bar) {
                self.advance(); // consume |
                // Expect the same function name
                let (next_name, _) = self.expect_ident()?;
                if next_name != name {
                    return Err(self.err(&format!(
                        "clausal function name mismatch: expected '{}', found '{}'",
                        self.interner.resolve(name),
                        self.interner.resolve(next_name),
                    )));
                }
            } else {
                break;
            }
        }

        let span = name_span.merge(clauses.last().unwrap().span);
        Ok(FunBinding {
            name,
            clauses,
            span,
        })
    }

    fn parse_datatype_decl(&mut self) -> Result<Decl, ParseError> {
        let start = self.span();
        self.advance(); // consume `datatype`

        let tyvars = self.parse_tyvar_params()?;
        let (name, _) = self.expect_name()?;
        self.expect(&TokenKind::Eq, "=")?;

        self.eat(&TokenKind::Bar); // optional leading |
        let mut constructors = Vec::new();
        loop {
            let con_start = self.span();
            let (con_name, _) = self.expect_upper_ident()?;
            let payload = if self.eat(&TokenKind::Of).is_some() {
                Some(self.parse_type_expr()?)
            } else {
                None
            };
            let con_span = if let Some(ref ty) = payload {
                con_start.merge(ty.span)
            } else {
                con_start
            };
            constructors.push(ConDecl {
                name: con_name,
                payload,
                span: con_span,
            });
            if self.eat(&TokenKind::Bar).is_none() {
                break;
            }
        }

        let span = start.merge(constructors.last().unwrap().span);
        Ok(Decl {
            kind: DeclKind::Datatype(DatatypeDecl {
                tyvars,
                name,
                constructors,
                span,
            }),
            span,
        })
    }

    fn parse_type_alias_decl(&mut self) -> Result<Decl, ParseError> {
        let start = self.span();
        self.advance(); // consume `type`
        let tyvars = self.parse_tyvar_params()?;
        let (name, _) = self.expect_name()?;
        self.expect(&TokenKind::Eq, "=")?;
        let ty = self.parse_type_expr()?;
        let span = start.merge(ty.span);
        Ok(Decl {
            kind: DeclKind::TypeAlias(TypeAliasDecl {
                tyvars,
                name,
                ty,
                span,
            }),
            span,
        })
    }

    fn parse_local_decl(&mut self) -> Result<Decl, ParseError> {
        let start = self.span();
        self.advance(); // consume `local`
        let mut locals = Vec::new();
        while !matches!(self.peek(), TokenKind::In | TokenKind::Eof) {
            locals.push(self.parse_decl()?);
        }
        self.expect(&TokenKind::In, "in")?;
        let mut body = Vec::new();
        while !matches!(self.peek(), TokenKind::End | TokenKind::Eof) {
            body.push(self.parse_decl()?);
        }
        let end_span = self.expect(&TokenKind::End, "end")?;
        let span = start.merge(end_span);
        Ok(Decl {
            kind: DeclKind::Local(locals, body),
            span,
        })
    }

    fn parse_use_decl(&mut self) -> Result<Decl, ParseError> {
        let start = self.span();
        self.advance(); // consume `use`
        if matches!(self.peek(), TokenKind::StringLit(_)) {
            let end = self.span();
            let path = self.take_string_lit();
            if !(path.starts_with("./") || path.starts_with("../")) {
                return Err(
                    self.err("use expects an explicit relative path beginning with './' or '../'")
                );
            }
            let span = start.merge(end);
            Ok(Decl {
                kind: DeclKind::Use(path),
                span,
            })
        } else {
            Err(self.err("expected string literal after 'use'"))
        }
    }

    fn parse_import_decl(&mut self) -> Result<Decl, ParseError> {
        let start = self.span();
        self.advance(); // consume `import`
        let (package, _) = self.expect_import_package_name()?;
        self.expect(&TokenKind::Dot, ".")?;
        let (module, mut end) = self.expect_upper_ident()?;
        if matches!(self.peek(), TokenKind::Dot) {
            return Err(self.err("import expects exactly two segments: Package.Module"));
        }
        let name = self.interner.intern(&format!(
            "{}.{}",
            self.interner.resolve(package),
            self.interner.resolve(module)
        ));

        // Check for optional (Name1, Name2, ...) exposure list
        if matches!(self.peek(), TokenKind::LParen) {
            self.advance(); // consume `(`
            let mut names = Vec::new();
            if matches!(self.peek(), TokenKind::RParen) {
                return Err(self.err("import exposure list cannot be empty"));
            }
            let (first, _) = self.expect_exposed_import_name()?;
            names.push(first);
            while matches!(self.peek(), TokenKind::Comma) {
                self.advance(); // consume `,`
                let (n, _) = self.expect_exposed_import_name()?;
                names.push(n);
            }
            self.expect(&TokenKind::RParen, ")")?;
            end = self.span();
            return Ok(Decl {
                kind: DeclKind::ImportWithNames(name, names),
                span: start.merge(end),
            });
        }

        Ok(Decl {
            kind: DeclKind::Import(name),
            span: start.merge(end),
        })
    }

    fn parse_signature_decl(&mut self) -> Result<Decl, ParseError> {
        let start = self.span();
        self.advance(); // consume `signature`
        let (name, _) = self.expect_upper_ident()?;
        self.expect(&TokenKind::Eq, "=")?;
        self.expect(&TokenKind::Sig, "sig")?;
        let mut specs = Vec::new();
        while !matches!(self.peek(), TokenKind::End | TokenKind::Eof) {
            specs.push(self.parse_signature_spec()?);
        }
        let end = self.expect(&TokenKind::End, "end")?;
        Ok(Decl {
            kind: DeclKind::Signature(SignatureDecl {
                name,
                specs,
                span: start.merge(end),
            }),
            span: start.merge(end),
        })
    }

    fn parse_signature_spec(&mut self) -> Result<SignatureSpec, ParseError> {
        let start = self.span();
        match self.peek() {
            TokenKind::Type => {
                self.advance();
                let tyvars = self.parse_tyvar_params()?;
                let (name, end) = self.expect_name()?;
                Ok(SignatureSpec::Type {
                    tyvars,
                    name,
                    span: start.merge(end),
                })
            }
            TokenKind::Val => {
                self.advance();
                let (name, _) = self.expect_ident()?;
                self.expect(&TokenKind::Colon, ":")?;
                let ty = self.parse_type_expr()?;
                Ok(SignatureSpec::Val {
                    name,
                    span: start.merge(ty.span),
                    ty,
                })
            }
            _ => Err(self.err("expected signature spec (type or val)")),
        }
    }

    fn parse_structure_decl(&mut self) -> Result<Decl, ParseError> {
        let start = self.span();
        self.advance(); // consume `structure`
        let (name, _) = self.expect_upper_ident()?;
        let (signature, opaque) = if self.eat(&TokenKind::ColonGt).is_some() {
            (Some(self.expect_upper_ident()?.0), true)
        } else if self.eat(&TokenKind::Colon).is_some() {
            (Some(self.expect_upper_ident()?.0), false)
        } else {
            (None, false)
        };
        self.expect(&TokenKind::Eq, "=")?;
        self.expect(&TokenKind::Struct, "struct")?;
        let mut decls = Vec::new();
        while !matches!(self.peek(), TokenKind::End | TokenKind::Eof) {
            decls.push(self.parse_decl()?);
        }
        let end = self.expect(&TokenKind::End, "end")?;
        Ok(Decl {
            kind: DeclKind::Structure {
                name,
                signature,
                opaque,
                decls,
            },
            span: start.merge(end),
        })
    }

    fn parse_effect_decl(&mut self) -> Result<Decl, ParseError> {
        let start = self.span();
        self.advance(); // consume `effect`
        let (name, end) = self.expect_upper_ident()?;
        let payload = if self.eat(&TokenKind::Of).is_some() {
            Some(self.parse_type_expr()?)
        } else {
            None
        };
        let span = start.merge(payload.as_ref().map_or(end, |t| t.span));
        Ok(Decl {
            kind: DeclKind::Effect(name, payload),
            span,
        })
    }

    fn parse_tyvar_params(&mut self) -> Result<Vec<Symbol>, ParseError> {
        if matches!(self.peek(), TokenKind::TyVar(_)) {
            return Ok(vec![self.take_symbol()]);
        }
        if self.eat(&TokenKind::LParen).is_none() {
            return Ok(vec![]);
        }
        let mut vars = vec![self.expect_tyvar()?];
        while self.eat(&TokenKind::Comma).is_some() {
            vars.push(self.expect_tyvar()?);
        }
        self.expect(&TokenKind::RParen, ")")?;
        Ok(vars)
    }

    // ── Expressions (lowest to highest precedence) ───────────────────

    fn parse_expr(&mut self) -> Result<Expr, ParseError> {
        self.guard_depth()?;
        let result = self.parse_expr_inner();
        self.unguard_depth();
        result
    }

    fn parse_expr_inner(&mut self) -> Result<Expr, ParseError> {
        let expr = self.parse_pipe()?;
        if self.eat(&TokenKind::Colon).is_some() {
            let ty = self.parse_type_expr()?;
            let span = expr.span.merge(ty.span);
            Ok(Expr {
                kind: ExprKind::Ann(Box::new(expr), ty),
                span,
            })
        } else {
            Ok(expr)
        }
    }

    fn parse_pipe(&mut self) -> Result<Expr, ParseError> {
        let mut lhs = self.parse_orelse()?;
        while self.eat(&TokenKind::PipeGt).is_some() {
            let rhs = self.parse_orelse()?;
            let span = lhs.span.merge(rhs.span);
            lhs = Expr {
                kind: ExprKind::BinOp(BinOp::Pipe, Box::new(lhs), Box::new(rhs)),
                span,
            };
        }
        Ok(lhs)
    }

    fn parse_orelse(&mut self) -> Result<Expr, ParseError> {
        let mut elems = vec![self.parse_andalso()?];
        while self.eat(&TokenKind::Orelse).is_some() {
            elems.push(self.parse_andalso()?);
        }
        let mut result = elems.pop().unwrap();
        while let Some(lhs) = elems.pop() {
            let span = lhs.span.merge(result.span);
            result = Expr {
                kind: ExprKind::BinOp(BinOp::Orelse, Box::new(lhs), Box::new(result)),
                span,
            };
        }
        Ok(result)
    }

    fn parse_andalso(&mut self) -> Result<Expr, ParseError> {
        let mut elems = vec![self.parse_comp()?];
        while self.eat(&TokenKind::Andalso).is_some() {
            elems.push(self.parse_comp()?);
        }
        let mut result = elems.pop().unwrap();
        while let Some(lhs) = elems.pop() {
            let span = lhs.span.merge(result.span);
            result = Expr {
                kind: ExprKind::BinOp(BinOp::Andalso, Box::new(lhs), Box::new(result)),
                span,
            };
        }
        Ok(result)
    }

    fn parse_comp(&mut self) -> Result<Expr, ParseError> {
        let lhs = self.parse_cons()?;
        let op = match self.peek() {
            TokenKind::Eq => Some(BinOp::Eq),
            TokenKind::Ne => Some(BinOp::Ne),
            TokenKind::Lt => Some(BinOp::Lt),
            TokenKind::Gt => Some(BinOp::Gt),
            TokenKind::Le => Some(BinOp::Le),
            TokenKind::Ge => Some(BinOp::Ge),
            _ => None,
        };
        if let Some(op) = op {
            self.advance();
            let rhs = self.parse_cons()?;
            let span = lhs.span.merge(rhs.span);
            Ok(Expr {
                kind: ExprKind::BinOp(op, Box::new(lhs), Box::new(rhs)),
                span,
            })
        } else {
            Ok(lhs)
        }
    }

    fn parse_cons(&mut self) -> Result<Expr, ParseError> {
        let mut elems = vec![self.parse_add()?];
        while self.eat(&TokenKind::ColonColon).is_some() {
            elems.push(self.parse_add()?);
        }
        let mut result = elems.pop().unwrap();
        while let Some(lhs) = elems.pop() {
            let span = lhs.span.merge(result.span);
            result = Expr {
                kind: ExprKind::Cons(Box::new(lhs), Box::new(result)),
                span,
            };
        }
        Ok(result)
    }

    fn parse_add(&mut self) -> Result<Expr, ParseError> {
        let mut lhs = self.parse_mul()?;
        loop {
            let op = match self.peek() {
                TokenKind::Plus => Some(BinOp::Add),
                TokenKind::Minus => Some(BinOp::Sub),
                TokenKind::Caret => Some(BinOp::ConcatStr),
                _ => None,
            };
            if let Some(op) = op {
                self.advance();
                let rhs = self.parse_mul()?;
                let span = lhs.span.merge(rhs.span);
                lhs = Expr {
                    kind: ExprKind::BinOp(op, Box::new(lhs), Box::new(rhs)),
                    span,
                };
            } else {
                break;
            }
        }
        Ok(lhs)
    }

    fn parse_mul(&mut self) -> Result<Expr, ParseError> {
        let mut lhs = self.parse_unary()?;
        loop {
            let op = match self.peek() {
                TokenKind::Star => Some(BinOp::Mul),
                TokenKind::Slash => Some(BinOp::Div),
                TokenKind::Mod => Some(BinOp::Mod),
                _ => None,
            };
            if let Some(op) = op {
                self.advance();
                let rhs = self.parse_unary()?;
                let span = lhs.span.merge(rhs.span);
                lhs = Expr {
                    kind: ExprKind::BinOp(op, Box::new(lhs), Box::new(rhs)),
                    span,
                };
            } else {
                break;
            }
        }
        Ok(lhs)
    }

    fn parse_unary(&mut self) -> Result<Expr, ParseError> {
        if matches!(self.peek(), TokenKind::Tilde) {
            let start = self.span();
            self.advance();
            let operand = self.parse_unary()?;
            let span = start.merge(operand.span);
            return Ok(Expr {
                kind: ExprKind::UnaryNeg(Box::new(operand)),
                span,
            });
        }
        if matches!(self.peek(), TokenKind::Not) {
            let start = self.span();
            self.advance();
            let operand = self.parse_unary()?;
            let span = start.merge(operand.span);
            return Ok(Expr {
                kind: ExprKind::Not(Box::new(operand)),
                span,
            });
        }
        self.parse_app()
    }

    fn parse_app(&mut self) -> Result<Expr, ParseError> {
        let mut lhs = self.parse_atom_expr()?;
        while self.can_start_app_arg() {
            let arg = self.parse_app_arg()?;
            let span = lhs.span.merge(arg.span);
            lhs = Expr {
                kind: ExprKind::App(Box::new(lhs), Box::new(arg)),
                span,
            };
        }
        Ok(lhs)
    }

    /// Parse an application argument: an atom, or a unary prefix (~, not) applied to an atom.
    fn parse_app_arg(&mut self) -> Result<Expr, ParseError> {
        let start = self.span();
        if matches!(self.peek(), TokenKind::Tilde) {
            self.advance();
            let operand = self.parse_atom_expr()?;
            let span = start.merge(operand.span);
            return Ok(Expr {
                kind: ExprKind::UnaryNeg(Box::new(operand)),
                span,
            });
        }
        if matches!(self.peek(), TokenKind::Not) {
            self.advance();
            let operand = self.parse_atom_expr()?;
            let span = start.merge(operand.span);
            return Ok(Expr {
                kind: ExprKind::Not(Box::new(operand)),
                span,
            });
        }
        self.parse_atom_expr()
    }
